# tp-C-algorithimique-l3

./: CMakeLists.txt  README.md
FONCTIONPAR/: CMakeLists.txt  main.c  structure.h
LISTE_DOUBLE/: CMakeLists.txt  structure.h
LISTE_DOUBLE/exercice1/: exercice1.c  fonctionListeDC.c  main.c
TD_PARCOURS_GRAPHES/: CMakeLists.txt  structure.h
TP9/: CMakeLists.txt  structure.h
TP9/exercice1/: exercice1.c
TP_AB/: CMakeLists.txt  exercice.c  fonctionsArbre.c  fonctionsPile.c  main.c  structure.h
TP_AP&TAS/: CMakeLists.txt
TP_AP&TAS/exerciceTas/: exerciceTas.c
TP_ARBRES/: structure.h
TP_ARBRES/exerciceTas/: main.c
TP_GRAPHES/: .gitignore  CMakeLists.txt  graphe.txt  main.c  structure.h  utilitaire.c
TP_GRAPHES/TD1_2/: mainTD1_2.c
TP_GRAPHES/TD1_2/partieTD/: exo3.c  exo4.c
TP_GRAPHES/TD1_2/partieTP/: alloc_lib.c  fichiers.c
TP_GRAPHES/TD3/: exo4.c  mainTD3.c
TP_GRAPHES/TD4/: mainTD4.c  partieTP.c
TP_GRAPHES/TD5/: mainTD5.c  partieTP.c
TP_GRAPHES/TD6/: mainTD6.c  partieTP.c
TP_GRAPHES/TD7/: mainTD7.c  partieTP.c
TP_GRAPHES/TD8/: partieTP.c
TP_GRAPHES/TD9/: partieTP.c
TP_GRAPHES/include/: prototypeTD12.h  prototypeTD3.h  prototypeTD4.h  prototypeTD5.h  prototypeTD6.h  prototypeTD7.h  prototypeTD8.h  prototypeTD9.h  structure.h
TP_GRAPHES/partieTD/: exo3.c  exo4.c
TP_GRAPHES/partieTP/: alloc_lib.c  fichiers.c  succ_pred.c  tab_mat.c
TP_GRAPHES/utils/: fonctionStruct.c  fonctionsListe.c  print.c
TP_LISTE/: CMakeLists.txt
TP_LISTE/exercice1_2_3/: exercice1.c  fonctionListe.c  main.c  structure.h
TP_LISTE/exercice3/: exercice3.c  fonctionListe.c  structure_exo3.h
TP_LISTEC/: CMakeLists.txt  exercice1.c  fonctionListeC.c  fonctionListeCTQ.c  main.c  structure.h
TP_TRIS/: CMakeLists.txt  triFusion.c  triInser.c  triRapide.c  triSel.c
TP_TRIS/data/: donnees.txt  resultFusion.txt  resultInser.txt  resultSel.txt  resultat.txt  resultatInser.txt
